--- a/templates/admin/chat-nav.html
+++ b/templates/admin/chat-nav.html
@@ -9,14 +9,18 @@
                 </li>
                 <li class="menu-title d-flex justify-content-between"><span>Chat Groups</span> <button class="btn text-primary m-0 p-0 " onclick="addGroupChat()"><i class="fa fa-plus"></i></button></li>
                 {% for group in group_list %}
-                <li>
-                    <button class="btn text-muted" id="room-name-{{group.id}}" onclick="redirectToGroupChatRoom({{group.id}})">
-                        <span class="chat-avatar-sm user-img">
-<!--                            <img class="rounded-circle" alt="" src="">&lt;!&ndash; <span class="status offline"></span> &ndash;&gt;-->
-                        </span>
-                        <span class="chat-user">{{group.name}}</span>
-                    </button>
-                </li>
+                    {% for receiver in group.receiver.all %}
+                        {% if user.id == receiver.id %}
+                            <li>
+                                <button class="btn text-muted" id="room-name-{{group.id}}" onclick="redirectToGroupChatRoom({{group.id}})">
+                                    <span class="chat-avatar-sm user-img">
+                                        <img class="rounded-circle" alt="" src="{{group.group_avatar.url}}"><!-- <span class="status offline"></span> -->
+                                    </span>
+                                    <span class="chat-user">{{group.name}}</span>
+                                </button>
+                            </li>
+                        {% endif %}
+                    {% endfor %}
                 {% endfor %}
                 <li class="menu-title">Direct Chats</li>
                 {% for user in user_list %}
@@ -50,6 +54,10 @@
 
 	function redirectToChatRoom(userID) {
 		window.location.pathname = '/hrms/chat/' + userID;
+	}
+
+	function redirectToGroupChatRoom(groupID) {
+		window.location.pathname = '/hrms/group-chat/' + groupID;
 	}
 </script>
 <!-- /Sidebar -->
