--- a/templates/admin/chat.html
+++ b/templates/admin/chat.html
@@ -171,6 +171,155 @@
 						</div>
 					</div>
 				</div>
+				{% elif group_details %}
+				<div class="chat-window">
+					<div class="fixed-header">
+						<div class="navbar">
+							<div class="user-details mr-auto">
+								<div class="float-left user-img">
+									<a href="profile.html">
+										<img src="{{group_details.group_avatar.url}}" alt="" class="avatar">
+<!--										<span class="status online"></span>-->
+									</a>
+								</div>
+								<div class=" float-left">
+									<a href=""><span class="text-dark">{{group_details.name}}</span> <!-- <i class="typing-text">Typing...</i>--></a>
+									<span class="last-seen">----</span>
+<!--									<span class="last-seen">Last seen today at 7:50 AM ||| {{ room_name|json_script:"room-name" }}</span>-->
+								</div>
+							</div>
+<!--							<div class="search-box">-->
+<!--								<div class="input-group input-group-sm">-->
+<!--									<input type="text" placeholder="Search" class="form-control">-->
+<!--									<span class="input-group-append">-->
+<!--										<button type="button" class="btn"><i class="fa fa-search"></i></button>-->
+<!--									</span>-->
+<!--								</div>-->
+<!--							</div>-->
+							<ul class="nav custom-menu">
+<!--								<li class="nav-item">-->
+<!--									<a class="nav-link task-chat profile-rightbar float-right" id="task_chat" href="#task_window"><i class="fa fa-user"></i></a>-->
+<!--								</li>-->
+<!--								<li class="nav-item">-->
+<!--									<a href="voice-call.html" class="nav-link"><i class="fa fa-phone"></i></a>-->
+<!--								</li>-->
+<!--								<li class="nav-item">-->
+<!--									<a href="video-call.html" class="nav-link"><i class="fa fa-video-camera"></i></a>-->
+<!--								</li>-->
+								<li class="nav-item dropdown dropdown-action">
+									<a aria-expanded="false" data-toggle="dropdown" class="nav-link dropdown-toggle" href=""><i class="fa fa-cog"></i></a>
+									<div class="dropdown-menu dropdown-menu-right">
+										<a href="javascript:void(0)" class="dropdown-item">Delete Conversations</a>
+										<a href="javascript:void(0)" class="dropdown-item">Settings</a>
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="chat-contents">
+<!--						<div class="chat-content-wrap">-->
+<!--							<div class="chat-wrap-inner">-->
+<!--								<div class="chat-box">-->
+<!--									<div class="chats">-->
+<!--										<div class="chat chat-right">-->
+<!--											<div class="chat-body">-->
+<!--												<div class="chat-bubble">-->
+<!--													<div class="chat-content">-->
+<!--														<p>Hello. What can I do for you?</p>-->
+<!--														<span class="chat-time">8:30 am</span>-->
+<!--													</div>-->
+<!--&lt;!&ndash;													<div class="chat-action-btns">&ndash;&gt;-->
+<!--&lt;!&ndash;														<ul>&ndash;&gt;-->
+<!--&lt;!&ndash;															<li><a href="#" class="share-msg" title="Share"><i class="fa fa-share-alt"></i></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;															<li><a href="#" class="edit-msg"><i class="fa fa-pencil"></i></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;															<li><a href="#" class="del-msg"><i class="fa fa-trash-o"></i></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;														</ul>&ndash;&gt;-->
+<!--&lt;!&ndash;													</div>&ndash;&gt;-->
+<!--												</div>-->
+<!--											</div>-->
+<!--										</div>-->
+<!--										<div class="chat-line">-->
+<!--											<span class="chat-date">October 8th, 2018</span>-->
+<!--										</div>-->
+<!--										<div class="chat chat-left">-->
+<!--											<div class="chat-avatar">-->
+<!--												<a href="profile.html" class="avatar">-->
+<!--													<img alt="" src="assets/img/profiles/avatar-05.jpg">-->
+<!--												</a>-->
+<!--											</div>-->
+<!--											<div class="chat-body">-->
+<!--												<div class="chat-bubble">-->
+<!--													<div class="chat-content">-->
+<!--														<p>I'm just looking around.</p>-->
+<!--														<p>Will you tell me something about yourself? </p>-->
+<!--														<span class="chat-time">8:35 am</span>-->
+<!--													</div>-->
+<!--&lt;!&ndash;													<div class="chat-action-btns">&ndash;&gt;-->
+<!--&lt;!&ndash;														<ul>&ndash;&gt;-->
+<!--&lt;!&ndash;															<li><a href="#" class="share-msg" title="Share"><i class="fa fa-share-alt"></i></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;															<li><a href="#" class="edit-msg"><i class="fa fa-pencil"></i></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;															<li><a href="#" class="del-msg"><i class="fa fa-trash-o"></i></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;														</ul>&ndash;&gt;-->
+<!--&lt;!&ndash;													</div>&ndash;&gt;-->
+<!--												</div>-->
+<!--												<div class="chat-bubble">-->
+<!--													<div class="chat-content">-->
+<!--														<p>Are you there? That time!</p>-->
+<!--														<span class="chat-time">8:40 am</span>-->
+<!--													</div>-->
+<!--&lt;!&ndash;													<div class="chat-action-btns">&ndash;&gt;-->
+<!--&lt;!&ndash;														<ul>&ndash;&gt;-->
+<!--&lt;!&ndash;															<li><a href="#" class="share-msg" title="Share"><i class="fa fa-share-alt"></i></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;															<li><a href="#" class="edit-msg"><i class="fa fa-pencil"></i></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;															<li><a href="#" class="del-msg"><i class="fa fa-trash-o"></i></a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;														</ul>&ndash;&gt;-->
+<!--&lt;!&ndash;													</div>&ndash;&gt;-->
+<!--												</div>-->
+<!--											</div>-->
+<!--										</div>-->
+<!--									</div>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--Chat View Add Manually-->
+					<div class="chat-log border overflow-auto px-2 h-100">
+						{% for message in massages %}
+							{% if message.sender.id == sender.id %}
+								<div class="text-right my-1 d-flex justify-content-end">
+									<div class="border pl-3 pr-1 pt-1 mr-1 rounded" style="background-color:#F6F4F4;">
+										<div>{{message.content}}</div>
+										<div class="h6 m-0 text-muted">{{message.timestamp}}</div>
+									</div>
+									<div><img class="avatar" src="{{message.sender.avatar.url}}"></div>
+								</div>
+							{%else%}
+								<div class="my-1 d-flex">
+									<div><img src="{{message.sender.avatar.url}}" class="avatar"></div>
+									<div class="border pr-3 pl-1 pt-1 rounded" style="background-color:#e8e3e3;">
+										<div>{{message.content}}</div>
+										<div class="h6 m-0 text-muted">{{message.timestamp}}</div>
+									</div>
+								</div>
+							{% endif %}
+						{% endfor %}
+					</div>
+					</div>
+					<div class="chat-footer">
+						<div class="message-bar">
+							<div class="message-inner">
+								<a class="link attach-icon" href="#" data-toggle="modal" data-target="#drag_files"><img src="assets/img/attachment.png" alt=""></a>
+								<div class="message-area">
+									<div class="input-group">
+										<input class="form-control chat-message-input" placeholder="Type message..." type="text">
+										<span class="input-group-append">
+											<button class="btn btn-custom chat-message-submit" type="button"><i class="fa fa-send"></i></button>
+										</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 				{% else %}
 				<div class="chat-window h-100">
 					<div class="d-flex flex-column justify-content-center align-items-center h-100">
@@ -513,6 +662,7 @@
 <!-- /Page Wrapper -->
 
 <script>
+    {% if room_name %}
     const room_name = "{{room_name}}";
     const chatSocket = new WebSocket("ws://" + window.location.host + "/ws/chat/" + room_name + "/");
 
@@ -527,9 +677,9 @@
     	const sender_user = "{{sender.id}}";
         const data = JSON.parse(e.data);
         if (sender_user == data.sender){
-        	document.querySelector("#chat-log").innerHTML += "<div class='text-right my-1 d-flex justify-content-end'><div class='border pl-3 pr-1 pt-1 mr-1 rounded' style='background-color:#F6F4F4;'><div>" +data.message+"</div><div class='h6 m-0 text-muted'>"+datetime +"</div></div><div><img class='avatar' src='{{sender.avatar.url}}'></div></div>";
+        	document.querySelector(".chat-log").innerHTML += "<div class='text-right my-1 d-flex justify-content-end'><div class='border pl-3 pr-1 pt-1 mr-1 rounded' style='background-color:#F6F4F4;'><div>" +data.message+"</div><div class='h6 m-0 text-muted'>"+datetime +"</div></div><div><img class='avatar' src='{{sender.avatar.url}}'></div></div>";
 		}else{
-        	document.querySelector("#chat-log").innerHTML += "<div class='my-1 d-flex'><div><img class='avatar' src='{{chat_users.avatar.url}}'></div><div class='border pl-3 pr-1 pt-1 mr-1 rounded' style='background-color:#e8e3e3;'><div>" +data.message+"</div><div class='h6 m-0 text-muted'>"+datetime+"</div></div></div>";
+        	document.querySelector(".chat-log").innerHTML += "<div class='my-1 d-flex'><div><img class='avatar' src='{{chat_users.avatar.url}}'></div><div class='border pl-3 pr-1 pt-1 mr-1 rounded' style='background-color:#e8e3e3;'><div>" +data.message+"</div><div class='h6 m-0 text-muted'>"+datetime+"</div></div></div>";
 		}
     };
 
@@ -545,15 +695,15 @@
         }
     };
 
-    document.querySelector("#chat-message-input").focus();
-    document.querySelector("#chat-message-input").onkeyup = function (e) {
+    document.querySelector(".chat-message-input").focus();
+    document.querySelector(".chat-message-input").onkeyup = function (e) {
         if (e.key === "Enter") {
-            document.querySelector("#chat-message-submit").click();
+            document.querySelector(".chat-message-submit").click();
         }
     };
 
-    document.querySelector("#chat-message-submit").onclick = function (e) {
-        const messageInputDom = document.querySelector("#chat-message-input");
+    document.querySelector(".chat-message-submit").onclick = function (e) {
+        const messageInputDom = document.querySelector(".chat-message-input");
         const message = messageInputDom.value;
         chatSocket.send(JSON.stringify({
         	'message': message,
@@ -562,6 +712,62 @@
 		}));
         messageInputDom.value = "";
     };
+
+    {% elif group_room_name %}
+
+    const room_name = "{{group_room_name}}";
+    const chatSocket = new WebSocket("ws://" + window.location.host + "/ws/group-chat/" + room_name + "/");
+
+    chatSocket.onopen = function (e) {
+        console.log("WebSocket connection established.");
+    };
+
+    chatSocket.onmessage = function (e) {
+    	const d = new Date();
+		let options = { year: 'numeric', month: 'long', day: 'numeric', hour: 'numeric', minute: 'numeric' };
+		let datetime = d.toLocaleString('en-US', options);
+    	const sender_user = "{{sender.id}}";
+        const data = JSON.parse(e.data);
+
+        if (sender_user == data.sender){
+        	document.querySelector(".chat-log").innerHTML += "<div class='text-right my-1 d-flex justify-content-end'><div class='border pl-3 pr-1 pt-1 mr-1 rounded' style='background-color:#F6F4F4;'><div>" +data.message+"</div><div class='h6 m-0 text-muted'>"+datetime +"</div></div><div><img class='avatar' src='{{sender.avatar.url}}'></div></div>";
+		}else{
+			document.querySelector(".chat-log").innerHTML += "<div class='my-1 d-flex'><div><img class='avatar' src='" + data.image + "'></div><div class='border pl-3 pr-1 pt-1 mr-1 rounded' style='background-color:#e8e3e3;'><div>" +data.message+"</div><div class='h6 m-0 text-muted'>"+datetime+"</div></div></div>";
+		}
+    };
+
+    chatSocket.onerror = function (event) {
+        console.error("WebSocket error observed:", event);
+    };
+
+    chatSocket.onclose = function (event) {
+        if (event.wasClean) {
+            console.log(`WebSocket connection closed cleanly, code=${event.code} reason=${event.reason}`);
+        } else {
+            console.error("Chat socket closed unexpectedly");
+        }
+    };
+
+    document.querySelector(".chat-message-input").focus();
+    document.querySelector(".chat-message-input").onkeyup = function (e) {
+        if (e.key === "Enter") {
+            document.querySelector(".chat-message-submit").click();
+        }
+    };
+
+    document.querySelector(".chat-message-submit").onclick = function (e) {
+        const messageInputDom = document.querySelector(".chat-message-input");
+        const message = messageInputDom.value;
+        chatSocket.send(JSON.stringify({
+        	'message': message,
+        	'room_name': room_name,
+			'sender': '{{request.user.id }}',
+			'image': '{{sender.avatar.url }}',
+		}));
+        messageInputDom.value = "";
+    };
+
+    {% endif %}
 </script>
 
 
