--- a/templates/employee/chat-nav.html
+++ b/templates/employee/chat-nav.html
@@ -8,39 +8,22 @@
                 <li>
                     <a href="{% url 'EmployeeIndex' %}"><i class="la la-home"></i> <span>Back to Home</span></a>
                 </li>
-                <li class="menu-title"><span>Chat Groups</span> <a href="#" data-toggle="modal" data-target="#add_group"><i class="fa fa-plus"></i></a></li>
-                <li>
-                    <a href="chat.html">
-                        <span class="chat-avatar-sm user-img">
-                            <img class="rounded-circle" alt="" src="assets/img/user.jpg">
-                        </span>
-                        <span class="chat-user">#General</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="chat.html">
-                        <span class="chat-avatar-sm user-img">
-                            <img class="rounded-circle" alt="" src="assets/img/user.jpg">
-                        </span>
-                        <span class="chat-user">#Video Responsive Survey</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="chat.html">
-                        <span class="chat-avatar-sm user-img">
-                            <img class="rounded-circle" alt="" src="assets/img/user.jpg">
-                        </span>
-                        <span class="chat-user">#500rs</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="chat.html">
-                        <span class="chat-avatar-sm user-img">
-                            <img class="rounded-circle" alt="" src="assets/img/user.jpg">
-                        </span>
-                        <span class="chat-user">#warehouse</span>
-                    </a>
-                </li>
+                <li class="menu-title d-flex justify-content-between"><span>Chat Groups</span> <button class="btn text-primary m-0 p-0 " onclick="addGroupChat()"><i class="fa fa-plus"></i></button></li>
+                {% for group in group_list %}
+                    {% for receiver in group.receiver.all %}
+                        {% if user.id == receiver.id %}
+                            <li>
+                                <button class="btn text-muted" id="room-name-{{group.id}}" onclick="redirectToGroupChatRoom({{group.id}})">
+                                    <span class="chat-avatar-sm user-img">
+                                        <img class="rounded-circle" alt="" src="{{group.group_avatar.url}}"><!-- <span class="status offline"></span> -->
+                                    </span>
+                                    <span class="chat-user">{{group.name}}</span>
+                                </button>
+                            </li>
+                        {% endif %}
+                    {% endfor %}
+                {% endfor %}
+                <li class="menu-title">Direct Chats</li>
 <!--                <li class="menu-title">Direct Chats <a href="#" data-toggle="modal" data-target="#add_chat_user"><i class="fa fa-plus"></i></a></li>-->
                 {% for user in user_list %}
                 <li>
@@ -58,10 +41,26 @@
     </div>
 </div>
 
+<div id="add-group-form"></div>
+
 
 <script>
+    function addGroupChat() {
+        $.ajax({
+            url: "{% url 'AddEmpGroupChat' %}",
+            success: function(response) {
+                $("#add-group-form").html(response);
+                $("#add_group_model").modal('show');
+            }
+        });
+    }
+
 	function redirectToChatRoom(userID) {
 		window.location.pathname = '/hrms/employee/chat/' + userID;
+	}
+
+    function redirectToGroupChatRoom(groupID) {
+		window.location.pathname = '/hrms/employee/group-chat/' + groupID;
 	}
 </script>
 <!-- /Sidebar -->
