--- a/templates/employee/chat.html
+++ b/templates/employee/chat.html
@@ -436,6 +436,7 @@
 <!--								</div>-->
 <!--							</div>-->
 <!--						</div>-->
+						{% if chat_users %}
 						<div class="content-full tab-pane show active" id="profile_tab">
 							<div class="display-table">
 								<div class="table-row">
@@ -443,30 +444,18 @@
 										<div class="table-content">
 											<div class="chat-profile-img">
 												<div>
-													<img class="" style="width:6rem; height:6rem; border-radius:50%" src="{{user.avatar.url}}" alt="">
+													<img class="" style="width:6rem; height:6rem; border-radius:50%" src="{{chat_users.avatar.url}}" alt="">
 												</div>
 												<div>
-													<h3 class="user-name m-t-10 mb-0">{{user.username}}</h3>
-													<small class="text-muted">{{user.designation}} | {{user.technology}}</small>
+													<h3 class="user-name m-t-10 mb-0">{{chat_users.username}}</h3>
+													<small class="text-muted">{{chat_users.designation}} | {{chat_users.technology}}</small>
 												</div>
 											</div>
 											<div class="chat-profile-info">
 												<ul class="user-det-list">
 													<li>
-														<span>Username:</span>
-														<span class="float-right text-muted">{{user.username}}</span>
-													</li>
-													<li>
-														<span>DOB:</span>
-														<span class="float-right text-muted">{{user.dob|date:"j - M - Y"}}</span>
-													</li>
-													<li>
-														<span>Email:</span>
-														<span class="float-right text-muted">{{user.email}}</span>
-													</li>
-													<li>
 														<span>Phone:</span>
-														<span class="float-right text-muted">{{user.phone}}</span>
+														<span class="float-right text-muted">{{chat_users.phone}}</span>
 													</li>
 												</ul>
 											</div>
@@ -531,6 +520,103 @@
 								</div>
 							</div>
 						</div>
+						{% elif group_details %}
+						<div class="content-full tab-pane show active" id="profile_tab">
+							<div class="display-table">
+								<div class="table-row">
+									<div class="table-body">
+										<div class="table-content">
+											<div class="chat-profile-img">
+												<div>
+													<img class="" style="width:6rem; height:6rem; border-radius:50%" src="{{group_details.group_avatar.url}}" alt="">
+												</div>
+												<div>
+													<h3 class="user-name m-t-10 mb-0">{{group_details.name}}</h3>
+<!--													<small class="text-muted">{{user.designation}} | {{user.technology}}</small>-->
+												</div>
+											</div>
+<!--											<div class="chat-profile-info">-->
+<!--												<ul class="user-det-list">-->
+<!--													<li>-->
+<!--														<span>Username:</span>-->
+<!--														<span class="float-right text-muted">{{user.username}}</span>-->
+<!--													</li>-->
+<!--													<li>-->
+<!--														<span>DOB:</span>-->
+<!--														<span class="float-right text-muted">{{user.dob|date:"j - M - Y"}}</span>-->
+<!--													</li>-->
+<!--													<li>-->
+<!--														<span>Email:</span>-->
+<!--														<span class="float-right text-muted">{{user.email}}</span>-->
+<!--													</li>-->
+<!--													<li>-->
+<!--														<span>Phone:</span>-->
+<!--														<span class="float-right text-muted">{{user.phone}}</span>-->
+<!--													</li>-->
+<!--												</ul>-->
+<!--											</div>-->
+											<div class="transfer-files">
+												<ul class="nav nav-tabs nav-tabs-solid nav-justified mb-0">
+													<li class="nav-item"><a class="nav-link active" href="#all_files" data-toggle="tab">All Files</a></li>
+													<li class="nav-item"><a class="nav-link" href="#my_files" data-toggle="tab">My Files</a></li>
+												</ul>
+												<div class="tab-content">
+													<div class="tab-pane show active" id="all_files">
+														<ul class="files-list">
+															<li>
+																<div class="files-cont">
+																	<div class="file-type">
+																		<span class="files-icon"><i class="fa fa-file-pdf-o"></i></span>
+																	</div>
+																	<div class="files-info">
+																		<span class="file-name text-ellipsis">AHA Selfcare Mobile Application Test-Cases.xls</span>
+																		<span class="file-author"><a href="#">Loren Gatlin</a></span> <span class="file-date">May 31st at 6:53 PM</span>
+																	</div>
+																	<ul class="files-action">
+																		<li class="dropdown dropdown-action">
+																			<a href="" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="material-icons">more_horiz</i></a>
+																			<div class="dropdown-menu">
+																				<a class="dropdown-item" href="javascript:void(0)">Download</a>
+																				<a class="dropdown-item" href="#" data-toggle="modal" data-target="#share_files">Share</a>
+																			</div>
+																		</li>
+																	</ul>
+																</div>
+															</li>
+														</ul>
+													</div>
+													<div class="tab-pane" id="my_files">
+														<ul class="files-list">
+															<li>
+																<div class="files-cont">
+																	<div class="file-type">
+																		<span class="files-icon"><i class="fa fa-file-pdf-o"></i></span>
+																	</div>
+																	<div class="files-info">
+																		<span class="file-name text-ellipsis">AHA Selfcare Mobile Application Test-Cases.xls</span>
+																		<span class="file-author"><a href="#">John Doe</a></span> <span class="file-date">May 31st at 6:53 PM</span>
+																	</div>
+																	<ul class="files-action">
+																		<li class="dropdown dropdown-action">
+																			<a href="" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="material-icons">more_horiz</i></a>
+																			<div class="dropdown-menu">
+																				<a class="dropdown-item" href="javascript:void(0)">Download</a>
+																				<a class="dropdown-item" href="#" data-toggle="modal" data-target="#share_files">Share</a>
+																			</div>
+																		</li>
+																	</ul>
+																</div>
+															</li>
+														</ul>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						{% endif %}
 					</div>
 				</div>
 			</div>
